src/objects/Home_Delivery_Voucher__c.object
<CustomObject>
    <description>Object that holds information about Deliver My Newspaper 3rd party platform usage or manual, call center defined home deliveries.</description>
    <fields>
        <fullName>API_Data__c</fullName>
        <description>In case of API created record, specifies full payload of the transactiion.</description>
        <inlineHelpText>In case of API created record, specifies full payload of the transactiion.</inlineHelpText>
        <label>API Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Link to account record.</description>
        <inlineHelpText>Link to account record.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Home Delivery Vouchers</relationshipLabel>
        <relationshipName>Home_Delivery_Vouchers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delivery_Address__c</fullName>
        <description>Concatenation of customer address fields.</description>
        <formula>Mailing_Postal_Code__c &amp;
IF(NOT(ISBLANK(Mailing_Postal_Code__c )), BR(), &apos;&apos;) &amp;
Mailing_Address__c &amp;
IF(OR(NOT(ISBLANK(Mailing_Postal_Code__c)), NOT(ISBLANK(Mailing_Address__c))), BR(), &apos;&apos;) &amp;
Mailing_Town__c &amp;
IF(OR(NOT(ISBLANK(Mailing_County__c)),NOT(ISBLANK(Mailing_Address__c)),NOT(ISBLANK(Mailing_Town__c))), BR(),&apos;&apos;) &amp; 
Mailing_County__c</formula>
        <inlineHelpText>Concatenation of customer address fields.</inlineHelpText>
        <label>Delivery Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Days__c</fullName>
        <description>Defines days at which the newspaper should be delivered.</description>
        <inlineHelpText>Defines days at which the newspaper should be delivered.</inlineHelpText>
        <label>Delivery Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mon</fullName>
                </value>
                <value>
                    <fullName>Tue</fullName>
                </value>
                <value>
                    <fullName>Wed</fullName>
                </value>
                <value>
                    <fullName>Thu</fullName>
                </value>
                <value>
                    <fullName>Fri</fullName>
                </value>
                <value>
                    <fullName>Sat</fullName>
                </value>
                <value>
                    <fullName>Sun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Defines offer description. It is auto-populated based on the source of the record.</description>
        <inlineHelpText>Defines offer description. It is auto-populated based on the source of the record.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duplicate_Flag__c</fullName>
        <description>Flag showing if record was added after the first one (if red). First record in type is green.</description>
        <formula>IMAGE( 
IF(Is_Duplicate__c, &quot;/img/samples/flag_red.gif&quot;,
&quot;/img/samples/flag_green.gif&quot;), &apos;flag&apos;
)</formula>
        <inlineHelpText>Flag showing if record was added after the first one (if red). First record in type is green.</inlineHelpText>
        <label>Duplicate Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email - in some cases might be different to the email on the related account.</description>
        <inlineHelpText>Email - in some cases might be different to the email on the related account.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the subscriber using home delivery voucher.</description>
        <inlineHelpText>First name of the subscriber using home delivery voucher.</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if this is record is second or later for the specific record type.</description>
        <inlineHelpText>Defines if this is record is second or later for the specific record type.</inlineHelpText>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the subscriber using home delivery voucher.</description>
        <inlineHelpText>Last name of the subscriber using home delivery voucher.</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <description>Address information - in some cases might be different to the address on the related account.</description>
        <inlineHelpText>Address information - in some cases might be different to the address on the related account.</inlineHelpText>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_County__c</fullName>
        <description>County - in some cases might be different to the address on the related account.</description>
        <inlineHelpText>County - in some cases might be different to the address on the related account.</inlineHelpText>
        <label>Mailing County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code__c</fullName>
        <description>Post Code - in some cases might be different to the address on the related account.</description>
        <inlineHelpText>Post Code - in some cases might be different to the address on the related account.</inlineHelpText>
        <label>Mailing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Town__c</fullName>
        <description>Town - in some edge cases might be different to the address field on the related account.</description>
        <inlineHelpText>Town - in some edge cases might be different to the address field on the related account.</inlineHelpText>
        <label>Mailing Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Preference_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if subscriber agreed to being contacted by email.</description>
        <inlineHelpText>Defines if subscriber agreed to being contacted by email.</inlineHelpText>
        <label>Marketing Preference Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Preference_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if subscriber agreed to being contacted by phone.</description>
        <inlineHelpText>Defines if subscriber agreed to being contacted by phone.</inlineHelpText>
        <label>Marketing Preference Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Preference_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if subscriber agreed to being contacted by post.</description>
        <inlineHelpText>Defines if subscriber agreed to being contacted by post.</inlineHelpText>
        <label>Marketing Preference Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Preference_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if subscriber agreed to being contacted by texts.</description>
        <inlineHelpText>Defines if subscriber agreed to being contacted by texts.</inlineHelpText>
        <label>Marketing Preference SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <description>Defines offer name. It is auto-populated based on the source of the record.</description>
        <inlineHelpText>Defines offer name. It is auto-populated based on the source of the record.</inlineHelpText>
        <label>Offer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone number of the subscriber.</description>
        <inlineHelpText>Phone number of the subscriber.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product determined by the number of delivery days.</description>
        <inlineHelpText>Product determined by the number of delivery days.</inlineHelpText>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select Print products for home delivery.</errorMessage>
            <filterItems>
                <field>zqu__ZProduct__c.Print_Product__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Home Delivery Vouchers</relationshipLabel>
        <relationshipName>Home_Delivery_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer_Address__c</fullName>
        <description>Retailer Address. Stored in case retailer lookup cannot be found.</description>
        <inlineHelpText>Retailer Address. Stored in case retailer lookup cannot be found.</inlineHelpText>
        <label>Retailer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retailer_Id__c</fullName>
        <description>Retailer identifier.</description>
        <externalId>true</externalId>
        <inlineHelpText>Retailer identifier.</inlineHelpText>
        <label>Retailer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Name__c</fullName>
        <description>Name of the retailer. Stored in case retailer lookup cannot be found.</description>
        <inlineHelpText>Name of the retailer. Stored in case retailer lookup cannot be found.</inlineHelpText>
        <label>Retailer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Phone__c</fullName>
        <description>Phone number of the retailer. Stored in case retailer lookup cannot be found.</description>
        <inlineHelpText>Phone number of the retailer. Stored in case retailer lookup cannot be found.</inlineHelpText>
        <label>Retailer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Retailer_Post_Code__c</fullName>
        <description>Retailer Post Code. Stored in case retailer lookup cannot be found.</description>
        <inlineHelpText>Retailer Post Code. Stored in case retailer lookup cannot be found.</inlineHelpText>
        <label>Retailer Post Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Town__c</fullName>
        <description>Retailer Town. Stored in case retailer lookup cannot be found.</description>
        <inlineHelpText>Retailer Town. Stored in case retailer lookup cannot be found.</inlineHelpText>
        <label>Retailer Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Retailer (Account)</description>
        <inlineHelpText>Link to Retailer (Account)</inlineHelpText>
        <label>Retailer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Not a valid Retailer.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Retailer Account</value>
            </filterItems>
            <filterItems>
                <field>Account.Closed__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator, TMG System, Clock</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Home Delivery Vouchers (Retailer)</relationshipLabel>
        <relationshipName>Home_Delivery_Vouchers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the delivery fulfillment. to completed once the voucher sending process has been manually fulfilled</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Number__c</fullName>
        <description>Subscriber number specified by customer on the registration form. Might not match the related account record.</description>
        <inlineHelpText>Subscriber number specified by customer on the registration form. Might not match the related account record.</inlineHelpText>
        <label>Subscriber Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Home Delivery Voucher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>X-{000000}</displayFormat>
        <label>Home Delivery Voucher Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Home Delivery Vouchers</pluralLabel>
    <recordTypes>
        <fullName>Deliver_My_Newspaper</fullName>
        <active>true</active>
        <description>Supports Deliver My Newspaper (3rd party) type of records.</description>
        <label>Deliver My Newspaper</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Delivery_Service</fullName>
        <active>true</active>
        <description>Supports manually created home delivery records.</description>
        <label>Home Delivery Service</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>